cmake_minimum_required(VERSION 3.5)
project( DisplayImage )
project( DisplayImage1 )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( DisplayImage start.cpp)
add_executable( DisplayImage1 start1.cpp)
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
target_link_libraries( DisplayImage1 ${OpenCV_LIBS} )
